# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  kielimalliselvitys.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
src/: main.py
src/game/: game_state.py  scores.py
src/tests/: game_state_test.py  scores_test.py
src/ui/: graphical_ui.py  text_ui.py
